Fix role feature permission

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8080
 
 # Disable default Security password for dev (optional)
-spring.security.user.name=
-spring.security.user.password=
+spring.security.user.name=admin
+spring.security.user.password=P@ssw0rd
 
 jwt.secret=YOUR_BASE64_ENCODED_SECRET_KEY_HERE
 #jwt.secret=YourSecretKeyHere
